[project]
name = "nutrition101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "anthropic==0.52.2",
    "click>=8.2.1",
    "ipdb==0.13.13",
    "ipython==9.3.0",
    "magentic==0.39.3",
    "pydantic==2.11.5",
    "telethon>=1.40.0",
]
