[project]
name = "nutrition101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "anthropic==0.52.2",
    "click>=8.2.1",
    "factory-boy>=3.3.3",
    "ipdb==0.13.13",
    "ipython==9.3.0",
    "magentic==0.39.3",
    "pydantic==2.11.5",
    "pytest>=8.4.1",
    "telethon>=1.40.0",
]

[dependency-groups]
dev = [
    "nutrition101",
]

[tool.uv.sources]
nutrition101 = { workspace = true }

[tool.uv.workspace]
members = [
    ".",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:abc"
]
